--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation files('libs/itextpdf-5.1.0.jar')
+    implementation files('libs/jai_imageio-1.1.jar')
+    implementation files('libs/jtransc-rt-0.5.0-ALPHA4.jar')
+    implementation files('libs/jtransc-rt-core-0.5.0-ALPHA4.jar')
 }
